fix: add mobile help bar background, fix horizontal scrolling (resolve #1333, resolves #1335)

--- a/resources/css/base/_base.css
+++ b/resources/css/base/_base.css
@@ -31,8 +31,22 @@ main .back-to-top a:visited {
     color: var(--link-color);
 }
 
-main > .center {
-    --gutter: var(--space-4);
+main > .center .full {
+    padding-inline: var(--space-4);
+}
+
+main .content > * {
+    padding-inline: var(--space-4);
+}
+
+@media (min-width: 75rem) {
+    main > .center {
+        --gutter: var(--space-4);
+    }
+
+    main > .center .full {
+        padding-inline: 0;
+    }
 }
 
 ul {
